Use media queries to separate desktop and mobile CSS Fixed all search results being hidden on mobile when the AI Overview appears somewhere other than the first regular search result

--- a/style.css
+++ b/style.css
@@ -1,29 +1,38 @@
 /* Desktop */
-/* Pre-rendered AI Overview, e.g. https://www.google.com/search?q=encanto+2+plot */
-#rcnt > style:first-child + div > div[data-hveid] > div[data-hveid] > div[id] > div:has(a[href^="https://support.google.com/websearch?p=ai_overviews"]) {
-  display: none;
-}
-#rcnt > style:first-child + div > div[data-hveid] > div[data-hveid] > div[id]:has(a[href^="https://support.google.com/websearch?p=ai_overviews"]) {
-  margin-top: 30px;
-}
+@media (hover: hover) {
+  /* Pre-rendered AI Overview, e.g. https://www.google.com/search?q=encanto+2+plot */
+  #rcnt > style:first-child + div > div[data-hveid] > div[data-hveid] > div[id] > div:has(a[href^="https://support.google.com/websearch?p=ai_overviews"]) {
+    display: none;
+  }
+  #rcnt > style:first-child + div > div[data-hveid] > div[data-hveid] > div[id]:has(a[href^="https://support.google.com/websearch?p=ai_overviews"]) {
+    margin-top: 30px;
+  }
 
-/* Dynamic AI Overview, which displays Searching…, Generating…
-/* Wrapper div[id] variant, e.g. https://www.google.com/search?q=biggest+oil+spills+in+history */
-#rcnt > style:first-child + div > div[data-hveid] > div[data-hveid] > div[id] > div:has([data-async-type="folsrch"]),
-/* No wrapper div[id] variant, e.g. https://www.google.com/search?q=plagiarism */
-#rcnt > style:first-child + div > div[data-hveid] > div[data-hveid] > div[class]:has([data-async-type="folsrch"]) {
-  display: none;
-}
-#rcnt > style:first-child + div > div[data-hveid] > div[data-hveid]:has([data-async-type="folsrch"]) {
-  margin-top: 30px;
-}
+  /* Dynamic AI Overview, which displays Searching…, Generating…
+  /* Wrapper div[id] variant, e.g. https://www.google.com/search?q=biggest+oil+spills+in+history */
+  #rcnt > style:first-child + div > div[data-hveid] > div[data-hveid] > div[id] > div:has([data-async-type="folsrch"]),
+  /* No wrapper div[id] variant, e.g. https://www.google.com/search?q=plagiarism */
+  #rcnt > style:first-child + div > div[data-hveid] > div[data-hveid] > div[class]:has([data-async-type="folsrch"]) {
+    display: none;
+  }
+  #rcnt > style:first-child + div > div[data-hveid] > div[data-hveid]:has([data-async-type="folsrch"]) {
+    margin-top: 30px;
+  }
 
-/* Product comparison AI Overview e.g. https://www.google.com/search?q=compare+xbox+playstation (may require U.S. proxy) */
-#kp-wp-tab-overview > div:first-child:has(a[href^="https://support.google.com/websearch?p=ai_overviews"]) {
-  display: none;
+  /* Product comparison AI Overview e.g. https://www.google.com/search?q=compare+xbox+playstation (may require U.S. proxy) */
+  #kp-wp-tab-overview > div:first-child:has(a[href^="https://support.google.com/websearch?p=ai_overviews"]) {
+    display: none;
+  }
 }
 
 /* Mobile */
-h1 + div[data-async-context] > div:first-child:has(path[d="M235.5 471C235.5 438.423 229.22 407.807 216.66 379.155C204.492 350.503 187.811 325.579 166.616 304.384C145.421 283.189 120.498 266.508 91.845 254.34C63.1925 241.78 32.5775 235.5 0 235.5C32.5775 235.5 63.1925 229.416 91.845 217.249C120.498 204.689 145.421 187.811 166.616 166.616C187.811 145.421 204.492 120.497 216.66 91.845C229.22 63.1925 235.5 32.5775 235.5 0C235.5 32.5775 241.584 63.1925 253.751 91.845C266.311 120.497 283.189 145.421 304.384 166.616C325.579 187.811 350.503 204.689 379.155 217.249C407.807 229.416 438.423 235.5 471 235.5C438.423 235.5 407.807 241.78 379.155 254.34C350.503 266.508 325.579 283.189 304.384 304.384C283.189 325.579 266.311 350.503 253.751 379.155C241.584 407.807 235.5 438.423 235.5 471Z"]) {
-  display: none;
+@media (hover: none) {
+  /* First item in regular search results, e.g. https://www.google.com/search?q=encanto+2+plot */
+  h1 + div[data-async-context] > div:first-child:not(:only-child):has(path[d="M235.5 471C235.5 438.423 229.22 407.807 216.66 379.155C204.492 350.503 187.811 325.579 166.616 304.384C145.421 283.189 120.498 266.508 91.845 254.34C63.1925 241.78 32.5775 235.5 0 235.5C32.5775 235.5 63.1925 229.416 91.845 217.249C120.498 204.689 145.421 187.811 166.616 166.616C187.811 145.421 204.492 120.497 216.66 91.845C229.22 63.1925 235.5 32.5775 235.5 0C235.5 32.5775 241.584 63.1925 253.751 91.845C266.311 120.497 283.189 145.421 304.384 166.616C325.579 187.811 350.503 204.689 379.155 217.249C407.807 229.416 438.423 235.5 471 235.5C438.423 235.5 407.807 241.78 379.155 254.34C350.503 266.508 325.579 283.189 304.384 304.384C283.189 325.579 266.311 350.503 253.751 379.155C241.584 407.807 235.5 438.423 235.5 471Z"]) {
+    display: none;
+  }
+  /* Product comparison AI Overview e.g. https://www.google.com/search?q=compare+xbox+playstation (may require U.S. proxy) */
+  #kp-wp-tab-overview > div:first-child:has(path[d="M235.5 471C235.5 438.423 229.22 407.807 216.66 379.155C204.492 350.503 187.811 325.579 166.616 304.384C145.421 283.189 120.498 266.508 91.845 254.34C63.1925 241.78 32.5775 235.5 0 235.5C32.5775 235.5 63.1925 229.416 91.845 217.249C120.498 204.689 145.421 187.811 166.616 166.616C187.811 145.421 204.492 120.497 216.66 91.845C229.22 63.1925 235.5 32.5775 235.5 0C235.5 32.5775 241.584 63.1925 253.751 91.845C266.311 120.497 283.189 145.421 304.384 166.616C325.579 187.811 350.503 204.689 379.155 217.249C407.807 229.416 438.423 235.5 471 235.5C438.423 235.5 407.807 241.78 379.155 254.34C350.503 266.508 325.579 283.189 304.384 304.384C283.189 325.579 266.311 350.503 253.751 379.155C241.584 407.807 235.5 438.423 235.5 471Z"]) {
+    display: none;
+  }
 }
